Module 5.2 Inversion of control and Dependency Injection. In addition, added JPA repository instead of JDBC.